# tech-point

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  common.yaml  docker-compose.yaml  pyproject.toml
tech_point/: manage.py
tech_point/api/: filters.py  permissions.py  v1_urls.py  views.py
tech_point/core/: celery.py
tech_point/core/management/commands/: setup_test_data.py
tech_point/supply_chain/: admin.py  factories.py  models.py  serializers.py  tasks.py
tech_point/supply_chain/migrations/: 0001_initial.py  0002_supplychain_suppliers.py  0003_alter_supplychainlink_parent_and_more.py  0004_remove_product_suppliers_alter_address_city_and_more.py
tech_point/tech_point/: asgi.py  settings.py  urls.py  wsgi.py
tech_point/templates/: qr.html
tech_point/users/: models.py  serializers.py
tech_point/users/migrations/: 0001_initial.py  0002_alter_customuser_workplace.py  0003_alter_customuser_is_active_and_more.py
